# dgRaph

./: .Rbuildignore  .gitignore  CNAME  DESCRIPTION  NAMESPACE  README.md  _config.yml  about.md  index.html
R/: Makevars  RDFGClass.R  RcppExports.R  betaPotential.R  build.R  copy.R  data.R  dfg.R  documentData.R  expect.R  facExpectations.R  findSaddlePoint.R  kl.R  likelihood.R  linregPotential.R  logregPotential.R  meanlinkPotential.R  mgf.R  mps.R  multinomialPotential.R  normalPotential.R  optimize.R  pgm.R  poibin.R  potentials.R  simulate.R  tail.R  train.R  unload.R  utils.R  zzz.R
_includes/: sidebar.html
_layouts/: page.html  post.html
_posts/: 2015-06-10-dgRaph.md  2015-06-10-installation.md  2015-06-10-tutorial.md  2015-06-11-Normal-Mixture.md  2015-06-19-Likelihood.md  2015-06-26-Motifs.md
data/: BammTransProb.rda  BammTransProbBg.rda  PFM.rda
downloads/: normalMixture.R
inst/: Doxyfile
knitr/: installation.Rmd  likelihood.Rmd  motifs.Rmd  normalMixture.Rmd  tutorial.Rmd
man/: BammTransProb.Rd  BammTransProbBg.Rd  PFM.Rd  PGMscore-package.Rd  as.matrix.potential.Rd  betaOptimize.Rd  betaPotential.Rd  dfg.Rd  dgRaph-package.Rd  dim.potential.Rd  evalDFG.Rd  expect.Rd  expect.dfg.Rd  expect2.Rd  expect2.dfg.Rd  facExpectations.Rd  fixedNormalPotential.Rd  fixedlinkOptimize.Rd  is.dfg.Rd  is.potential.Rd  kl.Rd  likelihood.Rd  linregOptimize.Rd  linregPotential.Rd  logregPotential.Rd  meanlinkPotential.Rd  mps.Rd  (+15 more)
tests/boost/: .gitignore  DiscreteFactorGraph_test.cpp  Factors_test.cpp  Makefile.am  StateMask_test.cpp  configure.ac  test.cpp
(+68 files in other folders)
